1.支持springboot3.x版本 2.jdk17+